--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     </div>
 
   </div>
+  <footer> By Warrenayiss </footer>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="game.js"></script>
